--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
 		</footer>
 		<p class="copyright">
 			<a href="https://cloudcannon.com/">
-				Template by CloudCannon
+				Template by CloudCannon, built with ❤ by <a href="https://www.github.com/sdghubtobbetu">the GreenYouth Team</a>.
 			</a>
 		</p>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
