--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<body>
 		<nav>
 			<div class="container">
-				<a href="{{ site.baseurl }}">{% include logo.html %}</a>
+				<a href="{{ site.baseurl }}">{{ site.baseurl }}/images/gy_abbv.png</a>
 			</div>
 		</nav>
 		<div class="content">
