--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,7 @@
 	</head>
 	<body>
 		<nav>
-			<div class="container">
-				<a href="{{ site.baseurl }}">{{ site.baseurl }}/images/gy_abbv.png</a>
-			</div>
+			<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/gy_abbv.png">
 		</nav>
 		<div class="content">
 			{{ content }}
