--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<nav>
-			<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/gy_abbv.png">
+			<a href="{{ site.baseurl }}">{% include logo.html %}</a>
 		</nav>
 		<div class="content">
 			{{ content }}
